--- a/Proba.html
+++ b/Proba.html
@@ -5,5 +5,6 @@
 	</HEAD>
 	<BODY>
 		<DIV style="border-style:solid;color:black;width:450px;height:450px;background-color:yellow;">David</DIV>
+                <DIV style="border-style:dotted;color:black;width:450px;height:450px;background-color:rgb(55,55,55);">Daniel</DIV>
 	</BODY>
 </HTML>
